See if we can get some of the permission related tests to pass for Servlet